--- a/webdev/image/3.3 Image Elements/index.html
+++ b/webdev/image/3.3 Image Elements/index.html
@@ -1,6 +1,13 @@
 <!-- Kitten image URL -->
-https://raw.githubusercontent.com/appbrewery/webdev/main/kitten.jpeg
-
+<h1>I'm a cat person</h1>
+<img
+  src="https://raw.githubusercontent.com/appbrewery/webdev/main/kitten.jpeg"
+  alt="image of a golden catto"
+/>
 
 <!-- Puppy image URL -->
-https://raw.githubusercontent.com/appbrewery/webdev/main/puppy.gif
+<h1>I'm a dog person</h1>
+<img
+  src="https://raw.githubusercontent.com/appbrewery/webdev/main/puppy.gif"
+  alt="funny dog at the beach"
+/>
