--- a/webdev/HTML/3.4 Birthday Invite Project/index.html
+++ b/webdev/HTML/3.4 Birthday Invite Project/index.html
@@ -7,7 +7,7 @@
 />
 <h3>What you need to bring:</h3>
 <ul>
-  <li>My jamai</li>
+  <li>Her jamai(siam(me))</li>
   <li>clothes</li>
   <li>perfumes</li>
   <li>skin care</li>
